--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.beardedhen:androidbootstrap:2.3.0'
+    compile 'com.jph.takephoto:takephoto_library:3.0.2'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
 }
