--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "fm.facemessage"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -26,4 +26,6 @@ dependencies {
     compile 'com.beardedhen:androidbootstrap:2.3.0'
     compile 'com.jph.takephoto:takephoto_library:3.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'cn.pedant.sweetalert:library:1.3'
+    compile files('libs/MegviiCloudLibrary.jar')
 }
