--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "fm.facemessage"
         minSdkVersion 19
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -22,10 +22,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.beardedhen:androidbootstrap:2.3.0'
     compile 'com.jph.takephoto:takephoto_library:3.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile files('libs/MegviiCloudLibrary.jar')
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.0.1'
 }
